Custom module Start

--- a/web/modules/custom/test/test.info.yml
+++ b/web/modules/custom/test/test.info.yml
@@ -1,5 +1,5 @@
-name: Test
-description: Core module for custom code, hooks and functions.
+name: Social links
+description: Module for creating social links block for entities.
 type: module
 core: 8.x
-package: Test
+package: Social
