--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "drupal/pathauto": "^1.8",
         "drupal/poll": "^1.4",
         "drupal/video_embed_field": "^2.4",
-        "drupal/views_slideshow": "^4.8"
+        "drupal/views_slideshow": "^4.8",
+      "ext-json": "*",
+        "ext-curl": "*"
     },
     "conflict": {
         "drupal/drupal": "*"
